--- a/EtecShop/Views/Home/Index.cshtml
+++ b/EtecShop/Views/Home/Index.cshtml
@@ -12,6 +12,37 @@
         </div>
     </div>
 </section>
+<div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
+      </div>
+        <div class="carousel-inner">
+
+            <div class="carousel-item">
+                <img src="~/img/produtos/Banner.png" width="800" height="400"  class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice"  focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"></rect>
+            </div>
+
+            <div class="carousel-item">
+                <img src="~/img/produtos/Banner.png" width="800" height="400"  class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice"  focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"></rect>
+            </div>
+
+            <div class="carousel-item active">
+                <img src="~/img/produtos/Banner.png" width="800" height="400"  class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice"  focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"></rect>
+            </div>
+        </div>
+        
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
 <div class="album py-5 bg-light">
     <div class="container">
         <div class="group text-center mb-5">
@@ -24,7 +55,7 @@
             asp-route-id="@categoria.Id">@categoria.Nome</a>
             }
         </div>
-
+        
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
             @foreach (var produto in Model.Produtos)
             {
